--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,76 @@
 	height: 300px; 
 }
 
+.snoski {
+	width: 400px;
+	height: 400px;
+	border:1px solid red;
+}
 
+
+.wrap-snoski {
+	width: 200px;
+	height: 300px;
+	margin: 40px auto;
+	
+}
+
+.snoski-txt {
+	width: 100%;
+	height: 200px;
+	border: 2px solid #e9e3db;
+	
+}
+
+.snoski-tre {
+	width: 100%;
+	height: 30px;
+	margin-bottom: 6px;
+	
+}
+
+.tre-on {
+	width: 30px;
+	height: 30px;
+	margin-left: 30px;
+	margin-top: -15px;
+	background-color: #fff;
+	border-right: 2px solid #e9e3db;
+	border-bottom: 2px solid #e9e3db;
+	
+	
+	  -moz-transform: rotate(45deg);  /* Firefox */
+  -o-transform: rotate(45deg);  /* Opera */
+  -webkit-transform: rotate(45deg);  /* Safari y Chrome */
+
+}
+
+.img-left {
+	width: 40%;
+	height: 70px;
+	float: left;
+	
+}
+
+.img-left img {
+	width: 100%;
+	height: 70px; 
+	-webkit-background-size: contain;
+	background-size: contain;
+}
+
+.img-txt {
+	width: 59%;
+	height: 70px;
+	float: left;
+	
+}
+
+.txt-inner {
+	width: 90%;
+	height: 180px;
+	margin: 20px auto;
+}
 
 
 
